--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <title>JQuery Removing Redundant Repetition</title>
+<form>
+  <select>
+    <option id="state">State</option>
+    <option id="province">Province</option>
+  </select>
+</form>
 
 </head>
 <body>
