--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
 <meta charset="utf-8" />
 <title>JQuery Removing Redundant Repetition</title>
+<!-- <a href="#" id="state">State</a>
+<a href="#" id="province">Province</a> -->
 <form>
-  <select>
-    <option id="state">State</option>
-    <option id="province">Province</option>
+  <input type="radio" id="state">State</input>
+  <input type="radio" id="province">Province</input>
+  <select id="country">
+    <option value="US">US</option>
+    <option value="CA">CA</option>
   </select>
 </form>
-
 </head>
 <body>
 
